force-app/main/default/objects/Child_Support__c/Child_Support__c.object-meta.xml
<CustomObject>
    <label>Child Support</label>
    <nameField>
        <label>Child Support Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>