force-app/main/default/objects/Child_Support__c/fields/Child_Support_City__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_City__c</fullName>
    <label>Child Support City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>