force-app/main/default/objects/Child_Support__c/fields/Child_Support_Country__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Country__c</fullName>
    <label>Child Support County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>