force-app/main/default/objects/Child_Support__c/fields/Child_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Date__c</fullName>
    <label>Child Support Date</label>
    <type>Date</type>
</CustomField>