force-app/main/default/objects/Child_Support__c/fields/Child_Support_Number__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Number__c</fullName>
    <label>Child Support Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>