force-app/main/default/objects/Child_Support__c/fields/Child_Support_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Payment_Amount__c</fullName>
    <label>Child Support Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>