force-app/main/default/objects/Child_Support__c/fields/Child_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_Support_Status__c</fullName>
    <label>Child Support Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>