force-app/main/default/objects/Child_Support__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Support</relationshipLabel>
    <relationshipName>Child_Support</relationshipName>
    <type>Lookup</type>
</CustomField>